FHIR_Tester_backend/services/monkey/parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Unused terminals:

    Empty
    True
    EQUAL
    Page
    False

Grammar

Rule 0     S' -> program
Rule 1     program -> program compound_action actions
Rule 2     program -> compound_action actions
Rule 3     program -> program actions
Rule 4     program -> actions
Rule 5     program -> error
Rule 6     actions -> actions action
Rule 7     actions -> action
Rule 8     action -> Auth STRING STRING NEWLINE
Rule 9     action -> movement NEWLINE
Rule 10    action -> movement target STRING BOOL NEWLINE
Rule 11    action -> movement target STRING NEWLINE
Rule 12    action -> movement target BOOL NEWLINE
Rule 13    action -> movement target NEWLINE
Rule 14    action -> movement STRING NEWLINE
Rule 15    action -> Judge target STRING NEWLINE
Rule 16    action -> Judge target Not STRING NEWLINE
Rule 17    action -> NEWLINE
Rule 18    action -> error NEWLINE
Rule 19    movement -> Prefer
Rule 20    movement -> Patient
Rule 21    movement -> Visit
Rule 22    movement -> Blind
Rule 23    movement -> Click
Rule 24    movement -> Input
Rule 25    movement -> Choose
Rule 26    movement -> Back
Rule 27    movement -> Forward
Rule 28    movement -> Accept
Rule 29    movement -> Auth
Rule 30    movement -> Dismiss
Rule 31    movement -> Press
Rule 32    movement -> Switch
Rule 33    movement -> Enter
Rule 34    movement -> LoadSmartApp
Rule 35    movement -> DoGenomicAuth
Rule 36    movement -> error
Rule 37    compound_action -> repeat_block
Rule 38    compound_action -> task_block
Rule 39    repeat_block -> Repeat NUMBER NEWLINE actions End NEWLINE
Rule 40    repeat_block -> Repeat NUMBER NEWLINE compound_action End NEWLINE
Rule 41    task_block -> Task ID NEWLINE actions End
Rule 42    task_block -> Task ID NEWLINE compound_action End
Rule 43    target -> STRING STRING
Rule 44    target -> STRING

Terminals, with rules where they appear

Accept               : 28
Auth                 : 8 29
BOOL                 : 10 12
Back                 : 26
Blind                : 22
Choose               : 25
Click                : 23
Dismiss              : 30
DoGenomicAuth        : 35
EQUAL                : 
Empty                : 
End                  : 39 40 41 42
Enter                : 33
False                : 
Forward              : 27
ID                   : 41 42
Input                : 24
Judge                : 15 16
LoadSmartApp         : 34
NEWLINE              : 8 9 10 11 12 13 14 15 16 17 18 39 39 40 40 41 42
NUMBER               : 39 40
Not                  : 16
Page                 : 
Patient              : 20
Prefer               : 19
Press                : 31
Repeat               : 39 40
STRING               : 8 8 10 11 14 15 16 43 43 44
Switch               : 32
Task                 : 41 42
True                 : 
Visit                : 21
error                : 5 18 36

Nonterminals, with rules where they appear

action               : 6 7
actions              : 1 2 3 4 6 39 41
compound_action      : 1 2 40 42
movement             : 9 10 11 12 13 14
program              : 1 3 0
repeat_block         : 37
target               : 10 11 12 13 15 16
task_block           : 38

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program compound_action actions
    (2) program -> . compound_action actions
    (3) program -> . program actions
    (4) program -> . actions
    (5) program -> . error
    (37) compound_action -> . repeat_block
    (38) compound_action -> . task_block
    (6) actions -> . actions action
    (7) actions -> . action
    (39) repeat_block -> . Repeat NUMBER NEWLINE actions End NEWLINE
    (40) repeat_block -> . Repeat NUMBER NEWLINE compound_action End NEWLINE
    (41) task_block -> . Task ID NEWLINE actions End
    (42) task_block -> . Task ID NEWLINE compound_action End
    (8) action -> . Auth STRING STRING NEWLINE
    (9) action -> . movement NEWLINE
    (10) action -> . movement target STRING BOOL NEWLINE
    (11) action -> . movement target STRING NEWLINE
    (12) action -> . movement target BOOL NEWLINE
    (13) action -> . movement target NEWLINE
    (14) action -> . movement STRING NEWLINE
    (15) action -> . Judge target STRING NEWLINE
    (16) action -> . Judge target Not STRING NEWLINE
    (17) action -> . NEWLINE
    (18) action -> . error NEWLINE
    (19) movement -> . Prefer
    (20) movement -> . Patient
    (21) movement -> . Visit
    (22) movement -> . Blind
    (23) movement -> . Click
    (24) movement -> . Input
    (25) movement -> . Choose
    (26) movement -> . Back
    (27) movement -> . Forward
    (28) movement -> . Accept
    (29) movement -> . Auth
    (30) movement -> . Dismiss
    (31) movement -> . Press
    (32) movement -> . Switch
    (33) movement -> . Enter
    (34) movement -> . LoadSmartApp
    (35) movement -> . DoGenomicAuth
    (36) movement -> . error

    error           shift and go to state 27
    Repeat          shift and go to state 9
    Task            shift and go to state 17
    Auth            shift and go to state 13
    Judge           shift and go to state 18
    NEWLINE         shift and go to state 12
    Prefer          shift and go to state 24
    Patient         shift and go to state 10
    Visit           shift and go to state 3
    Blind           shift and go to state 21
    Click           shift and go to state 29
    Input           shift and go to state 7
    Choose          shift and go to state 5
    Back            shift and go to state 25
    Forward         shift and go to state 6
    Accept          shift and go to state 26
    Dismiss         shift and go to state 22
    Press           shift and go to state 14
    Switch          shift and go to state 19
    Enter           shift and go to state 20
    LoadSmartApp    shift and go to state 11
    DoGenomicAuth   shift and go to state 8

    task_block                     shift and go to state 1
    repeat_block                   shift and go to state 23
    compound_action                shift and go to state 2
    actions                        shift and go to state 4
    program                        shift and go to state 15
    action                         shift and go to state 28
    movement                       shift and go to state 16

state 1

    (38) compound_action -> task_block .

    End             reduce using rule 38 (compound_action -> task_block .)
    Auth            reduce using rule 38 (compound_action -> task_block .)
    Judge           reduce using rule 38 (compound_action -> task_block .)
    NEWLINE         reduce using rule 38 (compound_action -> task_block .)
    error           reduce using rule 38 (compound_action -> task_block .)
    Prefer          reduce using rule 38 (compound_action -> task_block .)
    Patient         reduce using rule 38 (compound_action -> task_block .)
    Visit           reduce using rule 38 (compound_action -> task_block .)
    Blind           reduce using rule 38 (compound_action -> task_block .)
    Click           reduce using rule 38 (compound_action -> task_block .)
    Input           reduce using rule 38 (compound_action -> task_block .)
    Choose          reduce using rule 38 (compound_action -> task_block .)
    Back            reduce using rule 38 (compound_action -> task_block .)
    Forward         reduce using rule 38 (compound_action -> task_block .)
    Accept          reduce using rule 38 (compound_action -> task_block .)
    Dismiss         reduce using rule 38 (compound_action -> task_block .)
    Press           reduce using rule 38 (compound_action -> task_block .)
    Switch          reduce using rule 38 (compound_action -> task_block .)
    Enter           reduce using rule 38 (compound_action -> task_block .)
    LoadSmartApp    reduce using rule 38 (compound_action -> task_block .)
    DoGenomicAuth   reduce using rule 38 (compound_action -> task_block .)


state 2

    (2) program -> compound_action . actions
    (6) actions -> . actions action
    (7) actions -> . action
    (8) action -> . Auth STRING STRING NEWLINE
    (9) action -> . movement NEWLINE
    (10) action -> . movement target STRING BOOL NEWLINE
    (11) action -> . movement target STRING NEWLINE
    (12) action -> . movement target BOOL NEWLINE
    (13) action -> . movement target NEWLINE
    (14) action -> . movement STRING NEWLINE
    (15) action -> . Judge target STRING NEWLINE
    (16) action -> . Judge target Not STRING NEWLINE
    (17) action -> . NEWLINE
    (18) action -> . error NEWLINE
    (19) movement -> . Prefer
    (20) movement -> . Patient
    (21) movement -> . Visit
    (22) movement -> . Blind
    (23) movement -> . Click
    (24) movement -> . Input
    (25) movement -> . Choose
    (26) movement -> . Back
    (27) movement -> . Forward
    (28) movement -> . Accept
    (29) movement -> . Auth
    (30) movement -> . Dismiss
    (31) movement -> . Press
    (32) movement -> . Switch
    (33) movement -> . Enter
    (34) movement -> . LoadSmartApp
    (35) movement -> . DoGenomicAuth
    (36) movement -> . error

    Auth            shift and go to state 13
    Judge           shift and go to state 18
    NEWLINE         shift and go to state 12
    error           shift and go to state 31
    Prefer          shift and go to state 24
    Patient         shift and go to state 10
    Visit           shift and go to state 3
    Blind           shift and go to state 21
    Click           shift and go to state 29
    Input           shift and go to state 7
    Choose          shift and go to state 5
    Back            shift and go to state 25
    Forward         shift and go to state 6
    Accept          shift and go to state 26
    Dismiss         shift and go to state 22
    Press           shift and go to state 14
    Switch          shift and go to state 19
    Enter           shift and go to state 20
    LoadSmartApp    shift and go to state 11
    DoGenomicAuth   shift and go to state 8

    action                         shift and go to state 28
    actions                        shift and go to state 30
    movement                       shift and go to state 16

state 3

    (21) movement -> Visit .

    NEWLINE         reduce using rule 21 (movement -> Visit .)
    STRING          reduce using rule 21 (movement -> Visit .)


state 4

    (4) program -> actions .
    (6) actions -> actions . action
    (8) action -> . Auth STRING STRING NEWLINE
    (9) action -> . movement NEWLINE
    (10) action -> . movement target STRING BOOL NEWLINE
    (11) action -> . movement target STRING NEWLINE
    (12) action -> . movement target BOOL NEWLINE
    (13) action -> . movement target NEWLINE
    (14) action -> . movement STRING NEWLINE
    (15) action -> . Judge target STRING NEWLINE
    (16) action -> . Judge target Not STRING NEWLINE
    (17) action -> . NEWLINE
    (18) action -> . error NEWLINE
    (19) movement -> . Prefer
    (20) movement -> . Patient
    (21) movement -> . Visit
    (22) movement -> . Blind
    (23) movement -> . Click
    (24) movement -> . Input
    (25) movement -> . Choose
    (26) movement -> . Back
    (27) movement -> . Forward
    (28) movement -> . Accept
    (29) movement -> . Auth
    (30) movement -> . Dismiss
    (31) movement -> . Press
    (32) movement -> . Switch
    (33) movement -> . Enter
    (34) movement -> . LoadSmartApp
    (35) movement -> . DoGenomicAuth
    (36) movement -> . error

  ! shift/reduce conflict for Auth resolved as shift
  ! shift/reduce conflict for Judge resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for error resolved as shift
  ! shift/reduce conflict for Prefer resolved as shift
  ! shift/reduce conflict for Patient resolved as shift
  ! shift/reduce conflict for Visit resolved as shift
  ! shift/reduce conflict for Blind resolved as shift
  ! shift/reduce conflict for Click resolved as shift
  ! shift/reduce conflict for Input resolved as shift
  ! shift/reduce conflict for Choose resolved as shift
  ! shift/reduce conflict for Back resolved as shift
  ! shift/reduce conflict for Forward resolved as shift
  ! shift/reduce conflict for Accept resolved as shift
  ! shift/reduce conflict for Dismiss resolved as shift
  ! shift/reduce conflict for Press resolved as shift
  ! shift/reduce conflict for Switch resolved as shift
  ! shift/reduce conflict for Enter resolved as shift
  ! shift/reduce conflict for LoadSmartApp resolved as shift
  ! shift/reduce conflict for DoGenomicAuth resolved as shift
    Repeat          reduce using rule 4 (program -> actions .)
    Task            reduce using rule 4 (program -> actions .)
    $end            reduce using rule 4 (program -> actions .)
    Auth            shift and go to state 13
    Judge           shift and go to state 18
    NEWLINE         shift and go to state 12
    error           shift and go to state 31
    Prefer          shift and go to state 24
    Patient         shift and go to state 10
    Visit           shift and go to state 3
    Blind           shift and go to state 21
    Click           shift and go to state 29
    Input           shift and go to state 7
    Choose          shift and go to state 5
    Back            shift and go to state 25
    Forward         shift and go to state 6
    Accept          shift and go to state 26
    Dismiss         shift and go to state 22
    Press           shift and go to state 14
    Switch          shift and go to state 19
    Enter           shift and go to state 20
    LoadSmartApp    shift and go to state 11
    DoGenomicAuth   shift and go to state 8

  ! Auth            [ reduce using rule 4 (program -> actions .) ]
  ! Judge           [ reduce using rule 4 (program -> actions .) ]
  ! NEWLINE         [ reduce using rule 4 (program -> actions .) ]
  ! error           [ reduce using rule 4 (program -> actions .) ]
  ! Prefer          [ reduce using rule 4 (program -> actions .) ]
  ! Patient         [ reduce using rule 4 (program -> actions .) ]
  ! Visit           [ reduce using rule 4 (program -> actions .) ]
  ! Blind           [ reduce using rule 4 (program -> actions .) ]
  ! Click           [ reduce using rule 4 (program -> actions .) ]
  ! Input           [ reduce using rule 4 (program -> actions .) ]
  ! Choose          [ reduce using rule 4 (program -> actions .) ]
  ! Back            [ reduce using rule 4 (program -> actions .) ]
  ! Forward         [ reduce using rule 4 (program -> actions .) ]
  ! Accept          [ reduce using rule 4 (program -> actions .) ]
  ! Dismiss         [ reduce using rule 4 (program -> actions .) ]
  ! Press           [ reduce using rule 4 (program -> actions .) ]
  ! Switch          [ reduce using rule 4 (program -> actions .) ]
  ! Enter           [ reduce using rule 4 (program -> actions .) ]
  ! LoadSmartApp    [ reduce using rule 4 (program -> actions .) ]
  ! DoGenomicAuth   [ reduce using rule 4 (program -> actions .) ]

    action                         shift and go to state 32
    movement                       shift and go to state 16

state 5

    (25) movement -> Choose .

    NEWLINE         reduce using rule 25 (movement -> Choose .)
    STRING          reduce using rule 25 (movement -> Choose .)


state 6

    (27) movement -> Forward .

    NEWLINE         reduce using rule 27 (movement -> Forward .)
    STRING          reduce using rule 27 (movement -> Forward .)


state 7

    (24) movement -> Input .

    NEWLINE         reduce using rule 24 (movement -> Input .)
    STRING          reduce using rule 24 (movement -> Input .)


state 8

    (35) movement -> DoGenomicAuth .

    NEWLINE         reduce using rule 35 (movement -> DoGenomicAuth .)
    STRING          reduce using rule 35 (movement -> DoGenomicAuth .)


state 9

    (39) repeat_block -> Repeat . NUMBER NEWLINE actions End NEWLINE
    (40) repeat_block -> Repeat . NUMBER NEWLINE compound_action End NEWLINE

    NUMBER          shift and go to state 33


state 10

    (20) movement -> Patient .

    NEWLINE         reduce using rule 20 (movement -> Patient .)
    STRING          reduce using rule 20 (movement -> Patient .)


state 11

    (34) movement -> LoadSmartApp .

    NEWLINE         reduce using rule 34 (movement -> LoadSmartApp .)
    STRING          reduce using rule 34 (movement -> LoadSmartApp .)


state 12

    (17) action -> NEWLINE .

    Auth            reduce using rule 17 (action -> NEWLINE .)
    Judge           reduce using rule 17 (action -> NEWLINE .)
    NEWLINE         reduce using rule 17 (action -> NEWLINE .)
    error           reduce using rule 17 (action -> NEWLINE .)
    Prefer          reduce using rule 17 (action -> NEWLINE .)
    Patient         reduce using rule 17 (action -> NEWLINE .)
    Visit           reduce using rule 17 (action -> NEWLINE .)
    Blind           reduce using rule 17 (action -> NEWLINE .)
    Click           reduce using rule 17 (action -> NEWLINE .)
    Input           reduce using rule 17 (action -> NEWLINE .)
    Choose          reduce using rule 17 (action -> NEWLINE .)
    Back            reduce using rule 17 (action -> NEWLINE .)
    Forward         reduce using rule 17 (action -> NEWLINE .)
    Accept          reduce using rule 17 (action -> NEWLINE .)
    Dismiss         reduce using rule 17 (action -> NEWLINE .)
    Press           reduce using rule 17 (action -> NEWLINE .)
    Switch          reduce using rule 17 (action -> NEWLINE .)
    Enter           reduce using rule 17 (action -> NEWLINE .)
    LoadSmartApp    reduce using rule 17 (action -> NEWLINE .)
    DoGenomicAuth   reduce using rule 17 (action -> NEWLINE .)
    Repeat          reduce using rule 17 (action -> NEWLINE .)
    Task            reduce using rule 17 (action -> NEWLINE .)
    $end            reduce using rule 17 (action -> NEWLINE .)
    End             reduce using rule 17 (action -> NEWLINE .)


state 13

    (8) action -> Auth . STRING STRING NEWLINE
    (29) movement -> Auth .

  ! shift/reduce conflict for STRING resolved as shift
    STRING          shift and go to state 34
    NEWLINE         reduce using rule 29 (movement -> Auth .)

  ! STRING          [ reduce using rule 29 (movement -> Auth .) ]


state 14

    (31) movement -> Press .

    NEWLINE         reduce using rule 31 (movement -> Press .)
    STRING          reduce using rule 31 (movement -> Press .)


state 15

    (0) S' -> program .
    (1) program -> program . compound_action actions
    (3) program -> program . actions
    (37) compound_action -> . repeat_block
    (38) compound_action -> . task_block
    (6) actions -> . actions action
    (7) actions -> . action
    (39) repeat_block -> . Repeat NUMBER NEWLINE actions End NEWLINE
    (40) repeat_block -> . Repeat NUMBER NEWLINE compound_action End NEWLINE
    (41) task_block -> . Task ID NEWLINE actions End
    (42) task_block -> . Task ID NEWLINE compound_action End
    (8) action -> . Auth STRING STRING NEWLINE
    (9) action -> . movement NEWLINE
    (10) action -> . movement target STRING BOOL NEWLINE
    (11) action -> . movement target STRING NEWLINE
    (12) action -> . movement target BOOL NEWLINE
    (13) action -> . movement target NEWLINE
    (14) action -> . movement STRING NEWLINE
    (15) action -> . Judge target STRING NEWLINE
    (16) action -> . Judge target Not STRING NEWLINE
    (17) action -> . NEWLINE
    (18) action -> . error NEWLINE
    (19) movement -> . Prefer
    (20) movement -> . Patient
    (21) movement -> . Visit
    (22) movement -> . Blind
    (23) movement -> . Click
    (24) movement -> . Input
    (25) movement -> . Choose
    (26) movement -> . Back
    (27) movement -> . Forward
    (28) movement -> . Accept
    (29) movement -> . Auth
    (30) movement -> . Dismiss
    (31) movement -> . Press
    (32) movement -> . Switch
    (33) movement -> . Enter
    (34) movement -> . LoadSmartApp
    (35) movement -> . DoGenomicAuth
    (36) movement -> . error

    Repeat          shift and go to state 9
    Task            shift and go to state 17
    Auth            shift and go to state 13
    Judge           shift and go to state 18
    NEWLINE         shift and go to state 12
    error           shift and go to state 31
    Prefer          shift and go to state 24
    Patient         shift and go to state 10
    Visit           shift and go to state 3
    Blind           shift and go to state 21
    Click           shift and go to state 29
    Input           shift and go to state 7
    Choose          shift and go to state 5
    Back            shift and go to state 25
    Forward         shift and go to state 6
    Accept          shift and go to state 26
    Dismiss         shift and go to state 22
    Press           shift and go to state 14
    Switch          shift and go to state 19
    Enter           shift and go to state 20
    LoadSmartApp    shift and go to state 11
    DoGenomicAuth   shift and go to state 8

    task_block                     shift and go to state 1
    repeat_block                   shift and go to state 23
    compound_action                shift and go to state 35
    actions                        shift and go to state 36
    action                         shift and go to state 28
    movement                       shift and go to state 16

state 16

    (9) action -> movement . NEWLINE
    (10) action -> movement . target STRING BOOL NEWLINE
    (11) action -> movement . target STRING NEWLINE
    (12) action -> movement . target BOOL NEWLINE
    (13) action -> movement . target NEWLINE
    (14) action -> movement . STRING NEWLINE
    (43) target -> . STRING STRING
    (44) target -> . STRING

    NEWLINE         shift and go to state 38
    STRING          shift and go to state 37

    target                         shift and go to state 39

state 17

    (41) task_block -> Task . ID NEWLINE actions End
    (42) task_block -> Task . ID NEWLINE compound_action End

    ID              shift and go to state 40


state 18

    (15) action -> Judge . target STRING NEWLINE
    (16) action -> Judge . target Not STRING NEWLINE
    (43) target -> . STRING STRING
    (44) target -> . STRING

    STRING          shift and go to state 42

    target                         shift and go to state 41

state 19

    (32) movement -> Switch .

    NEWLINE         reduce using rule 32 (movement -> Switch .)
    STRING          reduce using rule 32 (movement -> Switch .)


state 20

    (33) movement -> Enter .

    NEWLINE         reduce using rule 33 (movement -> Enter .)
    STRING          reduce using rule 33 (movement -> Enter .)


state 21

    (22) movement -> Blind .

    NEWLINE         reduce using rule 22 (movement -> Blind .)
    STRING          reduce using rule 22 (movement -> Blind .)


state 22

    (30) movement -> Dismiss .

    NEWLINE         reduce using rule 30 (movement -> Dismiss .)
    STRING          reduce using rule 30 (movement -> Dismiss .)


state 23

    (37) compound_action -> repeat_block .

    End             reduce using rule 37 (compound_action -> repeat_block .)
    Auth            reduce using rule 37 (compound_action -> repeat_block .)
    Judge           reduce using rule 37 (compound_action -> repeat_block .)
    NEWLINE         reduce using rule 37 (compound_action -> repeat_block .)
    error           reduce using rule 37 (compound_action -> repeat_block .)
    Prefer          reduce using rule 37 (compound_action -> repeat_block .)
    Patient         reduce using rule 37 (compound_action -> repeat_block .)
    Visit           reduce using rule 37 (compound_action -> repeat_block .)
    Blind           reduce using rule 37 (compound_action -> repeat_block .)
    Click           reduce using rule 37 (compound_action -> repeat_block .)
    Input           reduce using rule 37 (compound_action -> repeat_block .)
    Choose          reduce using rule 37 (compound_action -> repeat_block .)
    Back            reduce using rule 37 (compound_action -> repeat_block .)
    Forward         reduce using rule 37 (compound_action -> repeat_block .)
    Accept          reduce using rule 37 (compound_action -> repeat_block .)
    Dismiss         reduce using rule 37 (compound_action -> repeat_block .)
    Press           reduce using rule 37 (compound_action -> repeat_block .)
    Switch          reduce using rule 37 (compound_action -> repeat_block .)
    Enter           reduce using rule 37 (compound_action -> repeat_block .)
    LoadSmartApp    reduce using rule 37 (compound_action -> repeat_block .)
    DoGenomicAuth   reduce using rule 37 (compound_action -> repeat_block .)


state 24

    (19) movement -> Prefer .

    NEWLINE         reduce using rule 19 (movement -> Prefer .)
    STRING          reduce using rule 19 (movement -> Prefer .)


state 25

    (26) movement -> Back .

    NEWLINE         reduce using rule 26 (movement -> Back .)
    STRING          reduce using rule 26 (movement -> Back .)


state 26

    (28) movement -> Accept .

    NEWLINE         reduce using rule 28 (movement -> Accept .)
    STRING          reduce using rule 28 (movement -> Accept .)


state 27

    (5) program -> error .
    (18) action -> error . NEWLINE
    (36) movement -> error .

  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
    Repeat          reduce using rule 5 (program -> error .)
    Task            reduce using rule 5 (program -> error .)
    Auth            reduce using rule 5 (program -> error .)
    Judge           reduce using rule 5 (program -> error .)
    error           reduce using rule 5 (program -> error .)
    Prefer          reduce using rule 5 (program -> error .)
    Patient         reduce using rule 5 (program -> error .)
    Visit           reduce using rule 5 (program -> error .)
    Blind           reduce using rule 5 (program -> error .)
    Click           reduce using rule 5 (program -> error .)
    Input           reduce using rule 5 (program -> error .)
    Choose          reduce using rule 5 (program -> error .)
    Back            reduce using rule 5 (program -> error .)
    Forward         reduce using rule 5 (program -> error .)
    Accept          reduce using rule 5 (program -> error .)
    Dismiss         reduce using rule 5 (program -> error .)
    Press           reduce using rule 5 (program -> error .)
    Switch          reduce using rule 5 (program -> error .)
    Enter           reduce using rule 5 (program -> error .)
    LoadSmartApp    reduce using rule 5 (program -> error .)
    DoGenomicAuth   reduce using rule 5 (program -> error .)
    $end            reduce using rule 5 (program -> error .)
    NEWLINE         shift and go to state 43
    STRING          reduce using rule 36 (movement -> error .)

  ! NEWLINE         [ reduce using rule 5 (program -> error .) ]
  ! NEWLINE         [ reduce using rule 36 (movement -> error .) ]


state 28

    (7) actions -> action .

    Auth            reduce using rule 7 (actions -> action .)
    Judge           reduce using rule 7 (actions -> action .)
    NEWLINE         reduce using rule 7 (actions -> action .)
    error           reduce using rule 7 (actions -> action .)
    Prefer          reduce using rule 7 (actions -> action .)
    Patient         reduce using rule 7 (actions -> action .)
    Visit           reduce using rule 7 (actions -> action .)
    Blind           reduce using rule 7 (actions -> action .)
    Click           reduce using rule 7 (actions -> action .)
    Input           reduce using rule 7 (actions -> action .)
    Choose          reduce using rule 7 (actions -> action .)
    Back            reduce using rule 7 (actions -> action .)
    Forward         reduce using rule 7 (actions -> action .)
    Accept          reduce using rule 7 (actions -> action .)
    Dismiss         reduce using rule 7 (actions -> action .)
    Press           reduce using rule 7 (actions -> action .)
    Switch          reduce using rule 7 (actions -> action .)
    Enter           reduce using rule 7 (actions -> action .)
    LoadSmartApp    reduce using rule 7 (actions -> action .)
    DoGenomicAuth   reduce using rule 7 (actions -> action .)
    Repeat          reduce using rule 7 (actions -> action .)
    Task            reduce using rule 7 (actions -> action .)
    $end            reduce using rule 7 (actions -> action .)
    End             reduce using rule 7 (actions -> action .)


state 29

    (23) movement -> Click .

    NEWLINE         reduce using rule 23 (movement -> Click .)
    STRING          reduce using rule 23 (movement -> Click .)


state 30

    (2) program -> compound_action actions .
    (6) actions -> actions . action
    (8) action -> . Auth STRING STRING NEWLINE
    (9) action -> . movement NEWLINE
    (10) action -> . movement target STRING BOOL NEWLINE
    (11) action -> . movement target STRING NEWLINE
    (12) action -> . movement target BOOL NEWLINE
    (13) action -> . movement target NEWLINE
    (14) action -> . movement STRING NEWLINE
    (15) action -> . Judge target STRING NEWLINE
    (16) action -> . Judge target Not STRING NEWLINE
    (17) action -> . NEWLINE
    (18) action -> . error NEWLINE
    (19) movement -> . Prefer
    (20) movement -> . Patient
    (21) movement -> . Visit
    (22) movement -> . Blind
    (23) movement -> . Click
    (24) movement -> . Input
    (25) movement -> . Choose
    (26) movement -> . Back
    (27) movement -> . Forward
    (28) movement -> . Accept
    (29) movement -> . Auth
    (30) movement -> . Dismiss
    (31) movement -> . Press
    (32) movement -> . Switch
    (33) movement -> . Enter
    (34) movement -> . LoadSmartApp
    (35) movement -> . DoGenomicAuth
    (36) movement -> . error
